@@ -1,6 +1,7 @@
 Version 5.3
 - Massive speedups
 - Improved sql tokenizing speed greatly.  Patch submitted by Maxim Mass (bug #36836)
+- Fixed possible overflow bug in MySqlPacket.ReadLong (bug #36997)
 
 Version 5.2.2 - 
 - Fixed profile provider that would throw an exception if you were updating
